# ferriscratico

./: .gitignore  Cargo.toml  LICENSE  README.md  discloud.config
src/: callback.rs  main.rs
src/commands/: mod.rs  test.rs
src/commands/info/: ajuda.rs  faq.rs  mod.rs  ping.rs  server.rs  user.rs
src/commands/moderation/: limpar.rs  mod.rs  mute.rs
src/handlers/: error.rs
src/locales/: error.yml
